--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#############################
+... from github.
+#############################
 # Compiled class file
 *.class
 
@@ -22,3 +25,61 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+#############################
+... from spring.io
+#############################
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
+
+#############################
+# My additions
+#############################
+
+# gradle
+wrapper
+gradlew*
+
+# ng
+
+dist
+.angular
+node_modules
+static
+*lock.json
+
